@@ -2,20 +2,29 @@ Just type "make; make install"
 
 There are a few things you can tweak in the Makefile:
 
-See the line:
-DEFS+=-DVERBOSE_DEBUG -DOLDSTUFF -DNO_FORK
+See the lines:
+DEFS+=-DUSE_OPENPTY #-DSETLOGIN_HOST
+#DEFS+=-DVERBOSE_DEBUG -DNO_FORK
+
 
 -DVERBOSE_DEBUG enables lots of messages onto stderr. If you're not helping me 
 test it or not wanting to try to fix it then you can remove this.
 
--DOLDSTUFF is for compatibility with old /bin/login commands and broken 
-openpty() implementations. If you have RedHat 6.0+ or Debian 2.1+ then you can 
-safely remove this and the "who" command will show the name of the terminal 
-server/host you came from.  If you have RedHat 5 or similar then leave it in: 
-otherwise it will not work at all.
+-DUSE_OPENPTY
+This is the default. It causes latd to use the openpty call in libutil 
+to generate the pairs of pseudo-terminals. Without this it will use old-style
+code. If you have a RedHat 5.2 (or similar vintage) distribution you might
+need to remove this to get latd to work. Any system with glibc 2.1.3 will be 
+fine with it though.
+
+-DSETLOGIN_HOST
+This depends on your login command. It works fine on RedHat 6.0+ and Debian
+2.1+ but not on SuSE 6.4 or Redhat 5.x so I've left it commented out by
+default. If you define it then the "who" command will show the name of the 
+terminal server/host you came from.
 
 -DNO_FORK prevent the daemon from forking into the background when run. Without
 this and without the -d flag, latd wil detach itself from the current process
-and run independantly. If you want to see the debug messges from -DVERBOSE_DEBUG
-then leave this option on or specifiy -d when you run latd.
+and run independantly. If you want to see the debug messges from 
+-DVERBOSE_DEBUG then leave this option on or specify -d when you run latd.
 
